# sotn-decomp

./: .gitignore  CMakeLists.txt  Makefile  duplicates.txt  funcs_sat.md  functions.txt  functions_saturn.md  generate.sh  sotn.sh  sotn_config.py
.github/workflows/: saturn-build.yml  validate-and-report.yml
config/: splat.dra.yaml  splat.us.dra.yaml  splat.us.stdre.yaml  splat.us.stwrp.yaml  symbols.us.strno3.txt  symbols.us.tt_001.txt  symbols.us.weapon.txt  undefined_syms.beta.txt
config/saturn/: richter_user_syms.txt
include/: dra.h  entity.h  game.h  log.h  types.h
include/psxsdk/: libetc.h
mwcc_test/: combined.c  one.c  one.h  two.c  two.h
src/dra/: 42398.c  5D7C0.c  5D874.c  62D70.c  75F54.c  8D3E8.c  91EBC.c  93BDC.c  d_10F94.c  d_E270.c  dra.h  pads.c
src/pc/: log.c  main.c  pc.c  sdl2.c  sim_pc.c  sotn.c  stage_dummy.c  str.c  stubs.c
src/pc/psxsdk/: build.py  build.sh  build_mednafen.sh  cpe.bat  emu.cpp  libcd.c  libgpu.c  libgs.c  libsnd.c  libspu.c  link.bat  link.txt  (+5 more)
src/ric/: 21250.c  22380.c  2C4C4.c  ric.h
src/saturn/: game.c  inc_asm.h  maria.c  richter.c
src/st/: shared.c
test/: .gitignore  one.h  three.h  two.h
test/one_file/: all.c  all.ld  build.sh
test/split/: build.sh  one.c  three.c  two.c
tools/builds/: saturn.py
tools/ghidra/: create-project.py  rec2-ghidra-apply-symbols.py
tools/ghidra/symbols/: CMakeLists.txt  Cargo.toml  example.c  main.cpp
tools/ghidra/symbols/src/: main.rs  main__.rs
tools/sotn-assets/: go.mod  go.sum  layer.go
tools/sotn-debugmodule/: Makefile  inject.c
tools/sotn_str/: sotn_str.py
(+84 files in other folders)
